--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embragies Independencia</title>
+    <title>Embragues Independencia</title>
     <link rel="stylesheet" href="../Css/reset.css/reset.css">
+    <link rel="shortcut icon" href="../banner/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../Css/contacto.css">
 </head>
 <body>
@@ -22,7 +23,52 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="main">
+    <div class="contact__title">
+      <h2 class="contact__h2">Contacto</h2>
+    </div>
+    <section class="contact__container">
+      <div class="form">
+        <div class="consult">
+          <h2 class="form__title">Forumulario de contacto</h2>
+          <form action="" class="form__container">
+            <div class="form__input formName" >
+              <label for="">Nombre</label>
+              <input type="text" required>
+            </div>
+            <div class="form__input formLastName">
+              <label for="">Apellido</label>
+              <input type="text" required>
+            </div>
+            <div class="form__input formEmail">
+              <label for="">Email</label>
+              <input type="email" required>
+            </div>
+            <div class="form__input formPhone">
+              <label for="">Telefono</label>
+              <input type="number" required>
+            </div>
+            <div class="form__input formQuery">
+              <label for="">Consulta</label>
+              <textarea name="" id="" ></textarea>
+            </div>
+            <input type="button" value="Enviar" class="button formButton">
+          </form>
+        </div>
+        <div class="address">
+          <h2 class="form__title">Datos de contacto</h2>
+          <div class="address__description">
+            <span>Direccion</span>
+            <p>Independencia 2410-LasHeras-Mendoza</p>
+            <span>Telefono</span>
+            <p>0800-000-000</p>
+            <span>Email</span>
+            <p>embraguesindependencia</p>
+            <p class="">En embragues independencia nos encantaría saber de usted. Por favor dejar infromación acerca de su consulta y lo contactaremos a la brevedad.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
   <footer class="footer">
@@ -32,7 +78,7 @@
           <h3>Detalles de conntacto</h3>
           <div class="contact__information">
             <P><i class="fa-solid fa-phone"></i>Telefono: 0800-000-000</P>
-            <p><i class="fa-solid fa-envelope"></i>Email: embraguesindependencia@gmail.com</p>
+            <p><i class="fa-solid fa-envelope"></i>Email: embraguesindependencia@hotmal.com</p>
           </div>
         </div>
       </div>
@@ -52,8 +98,8 @@
     </div>
 
     <div class="rights">
-      <p>Independencia 2410,Las Heras, Mendoza.</p>
-      <p>&copy;Embragues Independencia. All rights reserved.</p>
+      <p>Independencia 2410,Las Heras, Mendoza</p>
+      <p>&copy;Embragues Independencia. Todos los derechos reservados</p>
     </div>
 
   </footer>
