--- a/Css/contacto.css
+++ b/Css/contacto.css
@@ -1,1 +1,119 @@
 @import url(./style.css);
+body{
+    position: relative;
+}
+.header{
+    z-index: 1;
+}
+.main{
+    width: 90%;
+    margin: auto ;
+}
+.contact__title{
+    height: 5em;
+    width: 100%;
+    background:#ccc;
+    margin-bottom: 1em;
+    border-bottom-left-radius: 50px;
+}
+.contact__h2{
+    font-size: 2em;
+    line-height: 2em;
+    margin-left: 5%;
+}
+.contact__container{
+    background: url(../banner/direccion.png);
+    height: 55em;
+    background-repeat: no-repeat;
+    width: 100%;
+    background-size: contain;
+}
+
+.form{
+    background: #fff;
+    width: 70%;
+    margin: auto;
+    height: 70vh;
+    border: 2px solid #ccc;
+    position: absolute;
+    left: 15%;
+    top: 40%;
+    display: flex;
+    align-items: center;
+}
+
+.consult{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
+    padding: 0 20px;
+}
+.form__container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,3em) 6em 1.5em ;
+    height: 60%;
+    width: 80%;
+    gap: .8em;
+}
+.form__input{
+    width: 100%;
+    height: 3em;
+}
+
+.formName{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.formLastName{
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+.formEmail{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.formPhone{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+.formQuery{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+.formQuery textarea{
+    width: 100%;
+    height: 5em;
+}
+.formButton{
+    grid-column: 2/3;
+    grid-row: 4/5;
+    width: 70%;
+    margin-left:30%;
+}
+.form__title{
+    color: #126482;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.address{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 55px 20px;
+    position: relative;
+}
+.address__description{
+    margin-top: 11%;
+    line-height: 1.7em;
+}
+.address__description span{
+    font-weight: bold;
+}
+.address__description p:last-child{
+    color: #DB6221;
+}
