--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <main class="main ">
       <div class="presentation">
         <div class="presentation__description">
-          <h1>Líder en embragues y frenos.</h1>
+          <h1>Líder en embragues y frenos</h1>
           <p>Somos una pyme dedicada a la venta y reparacion de frenos y embragues, realizamos la venta de repuestos de los mismos y trabajamos con marcas de primera calidad. Contamos con mas de 15 años de trayectoria en el rubro y profesionales a  la altura de las cricunstacias.
           </p>
         </div>
@@ -45,7 +45,7 @@
           <div class="description">
             <h2>Embragues</h2>
             <p class="intro__text">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
-              autos, camionetas, camiones, maquinaria. Tambien realizamos la reaparacion de los mismmos
+              autos, camionetas, camiones, maquinaria. También realizamos la reaparación de los mismos
             </p>
             <a href="./productos.html"><button type="button" class="button button--products">Ver Productos</button></a>
           </div>
@@ -60,13 +60,13 @@
       <section class="location">
         <div class="location__desciption">
           <h3>Ubicación</h3>
-          <span>Nos encontramos en calle independencia 2410 de Las Heras.</span>
+          <span>Nos encontramos en calle independencia 2410 de Las Heras, Mendoza.</span>
           <span>Nuestros horarios son: 08:30 a 13:00hs-14:30 a18:30hs.</span>
         </div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13408.458907487917!2d-68.8073157!3d-32.8422139!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0f5266b96cfd%3A0xa2ee18304e147240!2sEmbragues%20Independencia!5e0!3m2!1ses-419!2sar!4v1687373207833!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </section>
       <section class="marcas">
-        <img src="../banner/marcas.png" alt="">
+        <img src="../banner/marcas.png" alt="Marcas Trabajadas">
       </section>
    
     </main>
@@ -78,7 +78,7 @@
             <h3>Detalles de conntacto</h3>
             <div class="contact__information">
               <P><i class="fa-solid fa-phone"></i>Telefono: 0800-000-000</P>
-              <p><i class="fa-solid fa-envelope"></i>Email: embraguesindependencia@gmail.com</p>
+              <p><i class="fa-solid fa-envelope"></i>Email: embraguesindependencia@hotmail.com</p>
             </div>
           </div>
         </div>
@@ -98,8 +98,8 @@
       </div>
 
       <div class="rights">
-        <p>Independencia 2410,Las Heras, Mendoza.</p>
-        <p>&copy;Embragues Independencia. All rights reserved.</p>
+        <p>Independencia 2410,Las Heras, Mendoza</p>
+        <p>&copy;Embragues Independencia. Todos los derechos reservados</p>
       </div>
     </footer>
     <script src="https://kit.fontawesome.com/341ef99b4c.js" crossorigin="anonymous"></script>
