--- a/templates/productos.html
+++ b/templates/productos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embragues Independencia</title>
     <link rel="stylesheet" href="../Css/reset.css/reset.css">
+    <link rel="shortcut icon" href="../banner/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../Css/productos.css">
 </head>
 <body>
@@ -22,8 +23,12 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="main">
+    <section class="products">
+    </section>
+    <section class="products__container">
 
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
@@ -32,7 +37,7 @@
           <h3>Detalles de conntacto</h3>
           <div class="contact__information">
             <P><i class="fa-solid fa-phone"></i>Telefono: 0800-000-000</P>
-            <p><i class="fa-solid fa-envelope"></i>Email: embraguesindependencia@gmail.com</p>
+            <p><i class="fa-solid fa-envelope"></i>Email: embraguesindependencia@hotmail.com</p>
           </div>
         </div>
       </div>
@@ -52,8 +57,8 @@
     </div>
 
     <div class="rights">
-      <p>Independencia 2410,Las Heras, Mendoza.</p>
-      <p>&copy;Embragues Independencia. All rights reserved.</p>
+      <p>Independencia 2410,Las Heras, Mendoza</p>
+      <p>&copy;Embragues Independencia. Todos los derechos reservados</p>
     </div>
   </footer>
   <script src="https://kit.fontawesome.com/341ef99b4c.js" crossorigin="anonymous"></script>
