--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
           <div class="description">
             <h2>Embragues</h2>
             <p class="intro__text">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
-              autos, camionetas, camiones, maquinaria. También realizamos la reaparación de los mismos
+              autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía y la rectificación del volante.
             </p>
             <a href="./productos.html"><button type="button" class="button button--products">Ver Productos</button></a>
           </div>
