--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -68,9 +68,9 @@
         <div class="address">
           <h2 class="form__title">Datos de contacto</h2>
           <div class="address__description">
-            <span>Direccion</span>
+            <span>Dirección</span>
             <p>Independencia 2410-LasHeras-Mendoza</p>
-            <span>Telefono</span>
+            <span>Teléfono</span>
             <p>0800-000-000</p>
             <span>Email</span>
             <p>embraguesindependencia@hotmail.com</p>
@@ -79,7 +79,11 @@
         </div>
       </div>
     </section>
-
+    <div class="whatsapp-button">
+      <a href="https://api.whatsapp.com/send?phone=2612147098" target="_blank" >
+        <img src="../banner/whatsapp.png" alt="WhatsApp">
+      </a>
+    </div>
   </main>
   <footer class="footer">
     <div class="container">
