--- a/templates/productos.html
+++ b/templates/productos.html
@@ -24,11 +24,72 @@
     </nav>
   </header>
   <main class="main">
-    <section class="products">
+    <section class="product-container">
+      <div class="product">
+        <div class="product__img">
+          <img src="../banner/productoEmbrague.png" alt="Embrague">
+        </div>
+        <div class="product__description">
+          <h2>Embragues</h2>
+          <p class="description">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
+            autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía.
+          </p>
+        </div>
+      </div>
+      <div class="product-type">
+        <ul >
+          <li class="product-type__list">
+            <div  class="intro-img">
+              <img src="../banner/embrague.png" alt="Embrague">
+            </div>
+            <article class="article">
+              <header class="article-header">
+                <h2 class="article-title">Embragues Nuevos</h2>
+              </header>
+              <div class="intro-product">
+                <p>
+                  Tenemos un gran stock de embragues de todo tipo de vehiculos, camionetas y proximamente de maquinarias. Consulte stock y variedad.
+                </p>
+              </div>
+              <a href="./contacto.html" class="article-consult">Consultar</a>
+            </article>
+          </li>
+          <li class="product-type__list">
+            <div class="intro-img"></div>
+            <article>
+              <header class="article-header">
+                <h2 class="article-title"></h2>
+              </header>
+              <div class="intro-product">
+                <p>
+                  
+                </p>
+              </div>
+              <a href="./contacto.html" class="article-consult">Consultar</a>
+            </article>
+          </li>
+          <li class="product-type__list">
+            <div class="intro-img"></div>
+            <article>
+              <header class="article-header">
+                <h2 class="article-title"></h2>
+              </header>
+              <div class="intro-product">
+                <p>
+                  
+                </p>
+              </div>
+              <a href="./contacto.html" class="article-consult">Consultar</a>
+            </article>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section class="products__container">
-
-    </section>
+    <div class="whatsapp-button">
+      <a href="https://api.whatsapp.com/send?phone=2612147098" target="_blank" >
+        <img src="../banner/whatsapp.png" alt="WhatsApp">
+      </a>
+    </div>
   </main>
   <footer class="footer">
     <div class="container">
