agregado de productos

--- a/templates/productos.html
+++ b/templates/productos.html
@@ -17,7 +17,7 @@
           <p>Embragues Independencia</p>
       </div>
       <ul class="nav__list">
-        <li><a href="./index.html" class="nav__link">Inicio</a></li>
+        <li><a href="../index.html" class="nav__link">Inicio</a></li>
         <li><a href="./productos.html" class="nav__link">Productos</a></li>
         <li></i><a href="./contacto.html" class="nav__link">Contacto</a></li>
       </ul>
@@ -38,50 +38,52 @@
       </div>
       <div class="product-type">
         <ul >
-          <li class="product-type__list">
+          <li class="product__list">
             <div  class="intro-img">
               <img src="../banner/embrague.png" alt="Embrague">
             </div>
             <article class="article">
-              <header class="article-header">
-                <h2 class="article-title">Embragues Nuevos</h2>
+              <header class="article__header">
+                <h2 class="article__title">Embragues Nuevos</h2>
               </header>
               <div class="intro-product">
                 <p>
                   Tenemos un gran stock de embragues de todo tipo de vehiculos, camionetas y proximamente de maquinarias. Consulte stock y variedad.
                 </p>
               </div>
-              <a href="./contacto.html" class="article-consult">Consultar</a>
+              <a href="./contacto.html" class="article-consult"><button type="button" class="button button--products">Consultar</button></a>
             </article>
           </li>
-          <li class="product-type__list">
+          <li class="product__list">
+            <div class="intro-img intro-img--despiece">
+              <img src="../banner/despiece.png" alt="">
+            </div>
+            <article class="article">
+              <header class="article__header">
+                <h2 class="article__title">Reparación de embragues</h2>
+              </header>
+              <div class="intro-product">
+                <p>
+                  Realizamos el recambio de embragues de camiones, autos camionetas, maquinarias agropecuarias
+                </p>
+              </div>
+              <a href="./contacto.html" class="article-consult"><button type="button" class="button button--products">Consultar</button></a>
+            </article>
+          </li>
+          <!-- <li class="product__list">
             <div class="intro-img"></div>
-            <article>
-              <header class="article-header">
-                <h2 class="article-title"></h2>
+            <article class="article">
+              <header class="article__header">
+                <h2 class="article__title"></h2>
               </header>
               <div class="intro-product">
                 <p>
                   
                 </p>
               </div>
-              <a href="./contacto.html" class="article-consult">Consultar</a>
+              <a href="./contacto.html" class="article-consult"><button type="button" class="button button--products">Consultar</button></a>
             </article>
-          </li>
-          <li class="product-type__list">
-            <div class="intro-img"></div>
-            <article>
-              <header class="article-header">
-                <h2 class="article-title"></h2>
-              </header>
-              <div class="intro-product">
-                <p>
-                  
-                </p>
-              </div>
-              <a href="./contacto.html" class="article-consult">Consultar</a>
-            </article>
-          </li>
+          </li> -->
         </ul>
       </div>
     </section>
