--- a/Css/style.css
+++ b/Css/style.css
@@ -3,6 +3,10 @@
 /* -------------header--------------- */
 body {
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: radial-gradient(circle,#fff,#ccc);
 }
 
 .header{
@@ -44,9 +48,6 @@ body {
 }
 
 /* ----------body---------- */
-body {
-    background: radial-gradient(circle,#fff,#ccc);
-}
 .main{
     background-color: #fff;
     width: 90%;
@@ -201,8 +202,6 @@ body {
     bottom: 12vh;
     right: 5vh;
     z-index: 9999;
-    
-
 }
 .whatsapp-button img{
     width: 3em;
@@ -210,13 +209,12 @@ body {
     filter: drop-shadow(1px 2px 3px #000);
 
 }
+
 /* ------------footer------------ */
 .footer{
     width: 100%;
-    position: relative;
-    bottom: 0;
     min-height: 25vh;
-    margin-bottom: 0;
+    margin-top: auto;
     outline: 1px solid #aaa;
     background-color: #126482;
 }
