--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -17,7 +17,7 @@
           <p>Embragues Independencia</p>
       </div>
       <ul class="nav__list">
-        <li><a href="./index.html" class="nav__link">Inicio</a></li>
+        <li><a href="../index.html" class="nav__link">Inicio</a></li>
         <li><a href="./productos.html" class="nav__link">Productos</a></li>
         <li></i><a href="./contacto.html" class="nav__link">Contacto</a></li>
       </ul>
