--- a/Css/contacto.css
+++ b/Css/contacto.css
@@ -88,9 +88,13 @@ body{
     grid-column: 2/3;
     grid-row: 2/3;
 }
+
 .formQuery{
     grid-column: 1/3;
     grid-row: 3/4;
+}
+.formQuery label {
+    width: 100%;
 }
 .formQuery textarea{
     width: 100%;
