--- a/Css/productos.css
+++ b/Css/productos.css
@@ -16,7 +16,7 @@
     border-top: 1px solid #887;
 }
 .product__img{
-    width: 40%;
+    width: 50%;
     height: 100%;
     padding: 2%;
 }
@@ -28,7 +28,7 @@
 }
 .product__description{
     width: 60%;
-    padding: 10%;
+    padding: 5%;
 }
 .product__description h2{
     font-size: 3em;
@@ -63,14 +63,19 @@
     border-bottom: 1px solid #887;
 }
 .intro-img{ 
-    background-color: #ccc;
     min-width:  400px;
     min-height: 220px;
 }
+
 .intro-img img{
     min-width: 100%;
     max-height: 210px;
     object-fit: contain;
+    transition: transform .5s;
+    filter: drop-shadow(2px 2px 6px #0f0f0f);
+}
+.intro-img img:hover{
+    transform: scale(1.05);
 }
 .article{
     display: grid;
@@ -96,4 +101,82 @@
 }
 .article-consult{
     margin-left: 0;
+}
+
+@media screen and (max-width: 1100px){
+    .intro-product{
+        padding: 0;
+    }
+    .intro-product p{
+        line-height: normal;
+    }
+    .article__title{
+        font-size: 1.7em;
+    }
+}
+@media  screen and (max-width:992px){
+    .product__list{
+        flex-direction: column;
+        height: auto;
+        border: 2px solid #0f0f0f !important;
+        margin-bottom: 20px;
+        border-radius: 10px;
+    }
+    .product-type{
+        height: auto;
+    }
+    .intro-img{
+        background:url(../banner/fondo_producto.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-width: 100%;
+        padding: 15px 0;
+        box-shadow: 0px 1px 4px #0f0f0f;
+        background-origin: border-box;
+    }
+    .article{
+        justify-items: center;
+    }
+    .article__header{
+        justify-self: center;
+    }
+    .intro-product p{
+        text-align: center;
+        width: auto;
+    }
+}
+@media screen and (max-width:870px){
+    .product{
+        flex-direction: column;
+        height: fit-content;
+        flex-wrap: wrap;
+    }
+    .product__description{
+        width: 100%;
+        padding: 2% 3%;
+        margin-bottom: 1rem;
+    }
+    .product__img{
+        width: 65%;
+    }
+    .description{
+        text-align: justify;
+    }
+    .product-type{
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+@media screen and (max-width:576px) {
+    .product-type{
+        width: 100%;
+    }
+    .article{
+        grid-template-columns: auto;
+        padding: 0;
+    }
+    .article__title{
+        font-size: 1.3rem;
+    }
 }
