--- a/templates/productos.html
+++ b/templates/productos.html
@@ -31,7 +31,7 @@
         <div class="product__img">
           <img src="../banner/productoEmbrague.png" alt="Embrague">
         </div>
-        <div class="product__description">
+        <div class="product__description product__description--products">
           <h2>Embragues</h2>
           <p class="description">En embragues independencia realizamos la venta de todo tipo de embragues por encargo, ya sea
             autos, camionetas, camiones, maquinaria. También se realiza la reaparación de los mismos con garantía.
