--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -33,14 +33,14 @@
       <div class="form">
         <div class="consult">
           <h2 class="form__title">Forumulario de contacto</h2>
-          <form action="" class="form__container" netlify>
-            <div class="form__input formName" >
+          <form action="" class="form__container ">
+            <div class="form__input formName col-sm-12" >
               <label for="nombre">
                 <span>Nombre</span>
                 <input type="text" required autocomplete="name" name="nombre" id="nombre">
               </label>
             </div>
-            <div class="form__input formLastName" >
+            <div class="form__input formLastName col-12" >
               <label for="apellido">
                 <span>Apellido</span>
                 <input type="text" required  name="apellido" id="apellido">
