--- a/Css/contacto.css
+++ b/Css/contacto.css
@@ -2,13 +2,7 @@
 body{
     position: relative;
 }
-.header{
-    z-index: 1;
-}
-.main{
-    width: 90%;
-    margin: auto ;
-}
+
 .contact__title{
     height: 5em;
     width: 100%;
@@ -106,6 +100,7 @@ body{
     grid-row: 4/5;
     width: 70%;
     margin-left:30%;
+    border: none;
 }
 .form__title{
     color: #126482;
@@ -134,6 +129,75 @@ body{
 
 /* ---------------mediaquery--------------- */
 
-@media screen and (max-width:1200px) {
-    
+@media screen and (max-width:1150px) {
+    .contact__container{
+        height: 70rem;
+    }
+    .form{
+        flex-direction: column;
+        height: 50rem;
+        top: 28%;
+        justify-content: space-evenly;
+    }
+    .consult{
+        width: 60%;
+        height: 20rem;
+        padding: 0;
+    }
+    .formButton{
+        grid-column: 1/3;
+        justify-self: center;
+        align-self: center;
+        margin: 0;
+    }
+    .address{
+        margin-top: 1rem;
+        width: 60%;
+        height: 20rem;
+        padding: 0;
+    }
+    .address__description{
+        margin-top: 3%;
+    }
+   
+}
+@media screen and (max-width:850px) {
+    .consult{
+        height: auto !important;
+    }
+    .form__container{
+        display: inline-block;
+        width: 100%;
+        height: auto;
+    }
+    .form__input{
+        height: auto;
+        margin: 10px auto;
+    }
+    .form__input label{
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+    }
+    .formButton{
+        margin: 5px 0 0 25%;
+        width: 50%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .consult, .address{
+        width: 80%;
+    }
+}
+@media screen and (max-width:576px) {
+    .contact__container{
+        height: 60rem;
+    }
+    .form{
+        position: relative;
+        width: 100%;
+        left: 0%;
+        top: 20%;
+    }
 }
