--- a/Css/productos.css
+++ b/Css/productos.css
@@ -157,13 +157,12 @@
     .product__description{
         width: 100%;
         padding: 2% 3%;
-        margin-bottom: 1rem;
     }
     .product__img{
         width: 65%;
     }
     .description{
-        text-align: justify;
+        height: auto;
     }
     .product-type{
         width: 90%;
